[package]
name = "lfs-core"
version = "0.10.2"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
keywords = ["linux", "filesystem", "fs"]
license = "MIT"
categories = ["filesystem"]
description = "give information on mounted disks"
repository = "https://github.com/Canop/lfs-core"
readme = "README.md"

[dependencies]
lazy-regex = "2.2"
libc = "0.2"
snafu = "0.7"
