[package]
name = "lfs-core"
version = "0.15.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
keywords = ["linux", "macos", "filesystem", "fs"]
license = "MIT"
categories = ["filesystem"]
description = "give information on mounted disks"
repository = "https://github.com/Canop/lfs-core"
homepage = "https://dystroy.org/dysk"
readme = "README.md"

[dependencies]
lazy-regex = "3.4"
libc = "0.2"
snafu = "0.7"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
io-kit-sys = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Storage_FileSystem", "Win32_System_SystemServices",] }
